RESOLVED FIXED65023
Web Inspector: the max depth of the Timeline events' stack trace should be customizable.
https://bugs.webkit.org/show_bug.cgi?id=65023
Summary Web Inspector: the max depth of the Timeline events' stack trace should be cu...
Ilya Tikhonovsky
Reported 2011-07-22 04:45:48 PDT
%subj%
Attachments
[patch] initial version (12.73 KB, patch)
2011-07-22 04:49 PDT, Ilya Tikhonovsky
pfeldman: review-
[patch] second version (13.26 KB, patch)
2011-07-22 05:25 PDT, Ilya Tikhonovsky
no flags
Ilya Tikhonovsky
Comment 1 2011-07-22 04:49:06 PDT
Created attachment 101712 [details] [patch] initial version
Pavel Feldman
Comment 2 2011-07-22 04:52:41 PDT
Comment on attachment 101712 [details] [patch] initial version View in context: https://bugs.webkit.org/attachment.cgi?id=101712&action=review > Source/WebCore/inspector/Inspector.json:1397 > + { "name": "maxJSCallStackDepth", "optional": true, "type": "integer" }, maxCallStackDepth missing description field: Samples JavaScript stack traces up to <code>maxCallStackDepth</code>, defaults to 5. > Source/WebCore/inspector/InspectorTimelineAgent.cpp:126 > + start(&error, &m_maxJSCallStackDepth); This value should be taken from the cookie.
Ilya Tikhonovsky
Comment 3 2011-07-22 05:25:43 PDT
Created attachment 101718 [details] [patch] second version
Ilya Tikhonovsky
Comment 4 2011-07-22 06:38:16 PDT
Comment on attachment 101718 [details] [patch] second version Clearing flags on attachment: 101718 Committed r91565: <http://trac.webkit.org/changeset/91565>
Ilya Tikhonovsky
Comment 5 2011-07-22 06:38:24 PDT
All reviewed patches have been landed. Closing bug.
Pavel Feldman
Comment 6 2011-07-25 00:27:40 PDT
Comment on attachment 101718 [details] [patch] second version View in context: https://bugs.webkit.org/attachment.cgi?id=101718&action=review > Source/WebCore/inspector/InspectorTimelineAgent.cpp:126 > + m_maxCallStackDepth = m_state->getLong(TimelineAgentState::timelineMaxCallStackDepth); Nit: you should assign value to a local variable here instead. "start" will handle the rest. Otherwise you violate the m_maxCallStackDepth encapsulation that limits its mutation to "start".
Note You need to log in before you can comment on or make changes to this bug.